Add signature for the GameGrid module

--- a/Droid_2048/Droid_2048.fsproj
+++ b/Droid_2048/Droid_2048.fsproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.fs" />
     <Compile Include="Properties\AssemblyInfo.fs" />
+    <Compile Include="GameGrid.fsi">
+    </Compile>
     <Compile Include="GameGrid.fs">
     </Compile>
     <Compile Include="MainActivity.fs" />
